# DemARK

./: .buildinfo  .cursorrules  .envrc  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .travis.yml  00-AI-NEW-CHAT-PREP.md  MAIN_BRANCH_INTEGRATION_SUMMARY.md  MRIDULS_FIX_INTEGRATION_SUMMARY.md  Makefile  PR1_CACHING_ANALYSIS.md  PR_220_CORE_FIX_DESCRIPTION.md  PR_DEVCONTAINER_DESCRIPTION.md  PR_INVESTIGATION_TOOLKIT_DESCRIPTION.md  PR_MESSAGE.md  README-IF-YOU-ARE-AN-AI.md  README.html  README.md  README_JUPYTER.md  README_REPAIRED_BRANCH.md  THREE_PR_STRATEGY_SUMMARY.md  _config.yml  _toc.yml  bisect_hark_breaking_changes.sh  create_repaired_branch.sh  environment.yml  fix_problematic_notebooks.sh  genindex.html  jupyter-direct.sh  jupyter-easy.sh  jupyter-final-test.sh  jupyter-launcher.sh  jupyter-simple-commands.sh  jupyter-simple.sh  jupyter-working-final.sh  jupyter-working.sh  launch-jupyter.sh  myst.yml  objects.inv  (+16 more)
.devcontainer/: DEBUGGING.md  Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh  setup.sh  test-container.sh
.ipynb_checkpoints/: Chinese Growth-checkpoint.ipynb
Chinese_Growth/: Chinese Growth.ipynb
ConsumptionSaving/: ConsIndShockModel.ipynb
DemARK_20231129-1727_history/: .envrc  README.md  run_tests.sh  setup_local_env.sh
DemARK_20240918-0003_counter/: .envrc  create_repaired_branch.sh
DemARK_20250628-2309_current/: .envrc  _config.yml  myst.yml  run_tests.sh  setup_local_env.sh
NonDurables_During_Great_Recession/: Non-Durables During Great Recession.ipynb
_sources/: README.md
docs/: todo.md  (+1 more)
(+285 files in other folders)
