[project]
name = "demark"
version = "0.1.0"
description = "Demonstrations of how to use material in the Econ-ARK heterogeneous agents modeling toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mystmd>=1.8.0",
]

[project.optional-dependencies]
notebooks = [
    "econ-ark",
    "ipywidgets",
    "pandas-datareader",
    "linearmodels",
    "tqdm",
]
test = [
    "pytest",
    "pytest-xdist",
    "nbval",
]
dev = [
    "demark[notebooks,test]",
    "jupyterlab",
]
